axum-debug/tests/fail/self_receiver.stderr
error: `#[debug_handler]` is not supported on methods
  --> tests/fail/self_receiver.rs:17:22
   |
17 |     async fn handler(self) {}
   |                      ^^^^
